	<<< Change Log >>>
02/07/2018
	* partial_mesh is added. This tool generate a new mesh object which contains
	only a boundary with a given attributes.
   	 petram.mesh.partial_mesh.surface(mesh, index, filename = '', precision=8)
           mesh: input mesh
	   index: surface attribute (bdr for 3Din3D, domain for 2Din3D and 2Din2D mesh)

01/12/2018
	* mfem_viewer is change to skip refinement steps
	* (perhaps, I should add an option to look refined mesh, for
	   adavptive meshing)
01/02/2018
	* Worked on Coeff2D. Diffusion term, Essential, Point source, Point Value, Natural
	are written
	* Coeff2D:PointValue is implemented using Lagrange multiplier and DeltaCoefficient
	* engine is fixed to work with real value problem
	* Lagrange multiplier can be array distributed among nodes.
	* call to verify_setting is added in engine so that it checks setting before assembling
	the matrix. In order to use this, each module shoud implement verify_setting method.
	* _sel_index=-1 indicates not to restrict coefficient.
	
12/15/2017
        ** fixed sel_button to work with mixed triangle and quad surfaces.
	
11/14/2017
	** fixed refine=1 when loading mesh file for visualization.
	** fixed EM2Da_PEC, EM3D_PEC. These BC now apply Et=0 properly w/o relying
	   on the initialization of solution vector by engine.
	** various improvement of dialog link behaviors.
        ** EM2Da_ExtJ is added for volumetric current source.
	** Dynamic loading of all installed physics modules 
11/07/2017
	** gl_plot_sol and mfem_viewer is modefided to handle a geometry which
	uses different types of elements.
	** many updates made to support em2da is merged to master
	
09/20/2017
        ** merged scripts in project tree and remote coonections
	Remote connection functionality is rewritten to be universal.
	Server side scripts should absorb the difference between
	remote servers.

	Toggle edge/point buttons are added
	Selecting vertex shows the vertex coordinates on the status
	bar.
	
09/04/2017
