@@ -1,4 +1,9 @@
 	<<< Change Log >>>
+02/08/2018
+	* extra contribution is assembled as matrix. Physics module must return t2
+	as vertical (transposed).This is due to Hypre
+	
+	
 02/07/2018
 	* partial_mesh is added. This tool generate a new mesh object which contains
 	only a boundary with a given attributes.
